2010-05-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/CompilationUnit.cs: Fixed part of
	  'Bug 609221 - Refactor->"Create Method" does not infer type
	  for parameter from LINQ query'.

2010-05-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ExpressionContext.cs: Changed linq
	  context.

2010-05-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/TypeResolverVisitor.cs:
	  Fixed potential type lookup problem.

2010-05-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Core.Assemblies/MonoRuntimeInfo.cs: Update
	  runtime version parsing.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs: Addad check.

2010-05-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Core/FileService.cs: New ToFilePathArray
	  extension method.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/CompilationUnit.cs: fixed
	  collection already modified exception.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ParsedDocument.cs: Implemented 'Bug
	  606544 - Better comment fold markers'.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Removed some
	  debug code.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Added a property
	  to determine, if a method resove result matches exactly one
	  of the found methods.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ExpressionContext.cs: Added LINQ
	  context.

2010-05-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/FileService.cs: FilePath should be
	  serializable.

2010-05-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Resolve results
	  can now contain errors.

2010-05-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: