@@ -1,3 +1,10 @@
+2010-05-31  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Projects.Dom/DomReturnType.cs:
+	* MonoDevelop.Projects.Dom/ResolveResult.cs: Fixed 'Bug 610006
+	  - Intellisense gives members of return type of functions
+	  even when that function isn't invoked'.
+
 2010-05-28  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Projects.Dom/CompilationUnit.cs: Fixed part of
